# bmstu-binary-genetics

./: LICENSE  README.md  binary-gen.cabal
src/: Genes.hs  Main.hs  Util.hs
